2018-04-26:comment module,close disqus,open gitalk

--- a/themes/concise/layout/post.ejs
+++ b/themes/concise/layout/post.ejs
@@ -2,4 +2,6 @@
 
 <% if( theme.disqus.enable && page.comments ) { %>
 <%- partial('_partial/comments', {post: page}) %>
+<% } else if( theme.gitalk.enable && page.comments ) { %>
+    <%- partial('_partial/comment', {post: page}) %>
 <% } %>
