2018-04-26:remove monokai-sublime style

--- a/themes/concise/source/css/style.less
+++ b/themes/concise/source/css/style.less
@@ -2,7 +2,7 @@
 @import './icons.less';
 
 @import './markdown.less';
-@import './monokai-sublime.less';
+//@import './monokai-sublime.less';
 
 @import './app.less';
 @import './nav.less';
